[gd_scene load_steps=4 format=3 uid="uid://bmyrdc4blriit"]

[ext_resource type="Script" path="res://Scenes/Scripts/Enemy AI/arrow.gd" id="1_dpkmy"]
[ext_resource type="Texture2D" uid="uid://bq756g1hn20d1" path="res://Sprites/Characters and items/Arrow.png" id="2_fsbmv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_js3ed"]
size = Vector2(18, 4)

[node name="Arrow" type="Area2D"]
process_mode = 1
scale = Vector2(4, 4)
collision_layer = 2
collision_mask = 7
script = ExtResource("1_dpkmy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_js3ed")

[node name="BulletEnemy" type="Sprite2D" parent="."]
texture = ExtResource("2_fsbmv")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, 1.19209e-07)
scale = Vector2(0.9, 0.2)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
